--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div>
           <ul class="contact__info__social-list">
             <li>
-              <a href="https://github.com/Rohail77"
+              <a href="https://github.com/rohailtaha"
                 ><img src="resources/images/github.svg" alt="github logo"
               /></a>
             </li>
