--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               Experienced Web Developer with expertise in HTML, CSS, SCSS,
               Javascript, Bootstrap, React, Node& Express and MySql.
               A self motivated individual having more than two years
-              of experience using these technologies.
+              of experience using web technologies.
             </p>
             <p>
               A good programming background as I am pursuing a bachelor's degree
