--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               perfect and fully responsive. I have a sound designer's eye to
               discover and fix issues in the UI's of existing layouts.
               Experienced Web Developer with expertise in HTML, CSS, SCSS,
-              Javascript, Bootstrap, React, Node& Express and MySql.
-              A self motivated individual having more than two years
-              of experience using web technologies.
+              Javascript, Bootstrap, React, Node& Express and MySql. A self
+              motivated individual having more than two years of experience
+              using web technologies.
             </p>
             <p>
               A good programming background as I am pursuing a bachelor's degree
@@ -178,6 +178,7 @@
             </p>
             <a
               href="resources/documents/Resume.pdf"
+              target="_blank"
               class="resume-link"
               id="resume-link"
               >Download Resume</a
