Changes - changes in "about me" section - rename files to remove spaces

--- a/index.html
+++ b/index.html
@@ -70,33 +70,6 @@
               <span>See my work</span>
             </a>
           </section>
-          <!-- <div class="cube">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-          </div> -->
         </div>
       </div>
     </section>
@@ -107,7 +80,7 @@
         <p class="work__click-text">Click to view details</p>
         <ul class="projects-list">
           <li class="project">
-            <a href="projects/softwares rating app.html" class="project__link">
+            <a href="projects/softwares-rating-app.html" class="project__link">
               <div class="project__link__content">
                 <span class="project__title">Softwares Rating App</span>
                 <div class="project__skills">
@@ -117,7 +90,7 @@
             </a>
           </li>
           <li class="project">
-            <a href="projects/ip address tracker.html" class="project__link">
+            <a href="projects/ip-address-tracker.html" class="project__link">
               <div class="project__link__content">
                 <span class="project__title">IP Address Tracker</span>
                 <div class="project__skills">
@@ -129,7 +102,7 @@
             </a>
           </li>
           <li class="project">
-            <a href="projects/rest countries api.html" class="project__link">
+            <a href="projects/rest-countries-api.html" class="project__link">
               <div class="project__link__content">
                 <span class="project__title">Rest Countries API</span>
                 <div class="project__skills">
@@ -141,7 +114,7 @@
           </li>
           <li class="project">
             <a
-              href="projects/social media dashboard.html"
+              href="projects/social-media-dashboard.html"
               class="project__link"
             >
               <div class="project__link__content">
@@ -164,12 +137,12 @@
           <div class="personal-details">
             <p>
               Great at converting UI designs to code and making them look pixel
-              perfect and fully responsive. I have a sound designer's eye to
-              discover and fix issues in the UI's of existing layouts.
-              Experienced Web Developer with expertise in HTML, CSS, SCSS,
-              Javascript, Bootstrap, React, Node& Express and MySql. A self
-              motivated individual having more than two years of experience
-              using web technologies.
+              perfect and fully responsive. I love writing clean and simple code
+              to make life easier for myself and other ode contributors.
+              Experienced Web Developer with expertise in HTML, CSS, Javascript,
+              React, NextJs, Node&Express, MySql and MongoDB. A highly motivated
+              individual having more than three years of experience using web
+              technologies.
             </p>
             <p>
               A good programming background as I am pursuing a bachelor's degree
@@ -177,7 +150,7 @@
               Technology (NUST).
             </p>
             <a
-              href="resources/documents/Resume.pdf"
+              href="resources/documents/resume.pdf"
               target="_blank"
               class="resume-link"
               id="resume-link"
@@ -248,8 +221,8 @@
     </footer>
     <script
       type="module"
-      src="js/main page/animations/resume link animation.js"
+      src="js/main-page/animations/resume-link-animation.js"
     ></script>
-    <script src="js/main page/animations/scroll animations.js"></script>
+    <script src="js/main-page/animations/scroll-animations.js"></script>
   </body>
 </html>
