--- a/projects/ip-address-tracker.html
+++ b/projects/ip-address-tracker.html
@@ -58,10 +58,10 @@
             <h1 class="project-details__title">IP Address Tracker</h1>
             <div class="project-details__desc">
               <p>
-                IP Address Tracker App to see the information and location of any IP address.
-                User will see his own IP Address on the map on the initial page
-                load. User can search for any IP address and see the key
-                information and location.
+                IP Address Tracker App to see the information and location of
+                any IP address. User will see his own IP Address on the map on
+                the initial page load. User can search for any IP address and
+                see the key information and location.
               </p>
               <p>
                 <b> IP Geolocation API </b> is used to get information about ip
@@ -98,9 +98,7 @@
           <div class="gallery__screen-toggle-btns">
             <a
               href="#"
-              class="
-                gallery__screen-toggle-btn gallery__screen-toggle-btn--active
-              "
+              class="gallery__screen-toggle-btn gallery__screen-toggle-btn--active"
               id="screen-toggle-btn__desktop"
               >Desktop</a
             >
@@ -118,13 +116,13 @@
             <div id="desktop-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/ip address tracker/desktop/home 1.png"
+                  src="../resources/images/projects/ip-address-tracker/desktop/home 1.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/ip address tracker/desktop/home 2.png"
+                  src="../resources/images/projects/ip-address-tracker/desktop/home 2.png"
                   alt="web page"
                 />
               </div>
@@ -134,19 +132,19 @@
             <div id="mobile-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/ip address tracker/mobile/home 1.png"
+                  src="../resources/images/projects/ip-address-tracker/mobile/home 1.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/ip address tracker/mobile/home 2.png"
+                  src="../resources/images/projects/ip-address-tracker/mobile/home 2.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/ip address tracker/mobile/home 3.png"
+                  src="../resources/images/projects/ip-address-tracker/mobile/home 3.png"
                   alt="web page"
                 />
               </div>
@@ -156,10 +154,10 @@
       </section>
     </div>
 
-    <script src="../js/project details page/animations/slides maker.js"></script>
+    <script src="../js/project-details-page/animations/slides-maker.js"></script>
     <script
       type="module"
-      src="../js/project details page/animations/links hover animations.js"
+      src="../js/project-details-page/animations/links-hover-animations.js"
     ></script>
   </body>
 </html>
