--- a/projects/rest-countries-api.html
+++ b/projects/rest-countries-api.html
@@ -103,9 +103,7 @@
           <div class="gallery__screen-toggle-btns">
             <a
               href="#"
-              class="
-                gallery__screen-toggle-btn gallery__screen-toggle-btn--active
-              "
+              class="gallery__screen-toggle-btn gallery__screen-toggle-btn--active"
               id="screen-toggle-btn__desktop"
               >Desktop</a
             >
@@ -123,51 +121,51 @@
             <div id="desktop-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/light mode/home 1.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/light mode/home 1.png"
                   alt="web page"
                 />
               </div>
 
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/dark mode/home 1.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/dark mode/home 1.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/light mode/home 3.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/light mode/home 3.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/light mode/country details.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/light mode/country details.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/dark mode/country details.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/dark mode/country details.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/light mode/home 2.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/light mode/home 2.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/dark mode/home 3.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/dark mode/home 3.png"
                   alt="web page"
                 />
               </div>
 
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/desktop/dark mode/home 2.png"
+                  src="../resources/images/projects/rest-countries-api/desktop/dark mode/home 2.png"
                   alt="web page"
                 />
               </div>
@@ -177,37 +175,37 @@
             <div id="mobile-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/dark mode/home 1.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/dark mode/home 1.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/light mode/home.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/light mode/home.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/dark mode/country details.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/dark mode/country details.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/light mode/country details.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/light mode/country details.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/dark mode/country details 2.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/dark mode/country details 2.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/rest countries api/mobile/dark mode/home 2.png"
+                  src="../resources/images/projects/rest-countries-api/mobile/dark mode/home 2.png"
                   alt="web page"
                 />
               </div>
@@ -217,10 +215,10 @@
       </section>
     </div>
 
-    <script src="../js/project details page/animations/slides maker.js"></script>
+    <script src="../js/project-details-page/animations/slides-maker.js"></script>
     <script
       type="module"
-      src="../js/project details page/animations/links hover animations.js"
+      src="../js/project-details-page/animations/links-hover-animations.js"
     ></script>
   </body>
 </html>
