--- a/projects/social-media-dashboard.html
+++ b/projects/social-media-dashboard.html
@@ -30,9 +30,7 @@
                 <li><a href="../index.html#work" id="work-link">Work</a></li>
                 <li class="nav__list__separator">\</li>
                 <li>
-                  <a href="#project-page"
-                    >Social Media Dashboard</a
-                  >
+                  <a href="#project-page">Social Media Dashboard</a>
                 </li>
               </ul>
             </nav>
@@ -59,7 +57,7 @@
           <div class="vertical-space-distributor">
             <h1 class="project-details__title">Social Media Dashboard</h1>
             <div class="project-details__desc">
-              <p>A responsive social media dashboard page with theme toggle.</p>
+              <p>A responsive social-media-dashboard page with theme toggle.</p>
               <p>
                 <b> Sass Preprocesor </b> is used for styling. Javascript code
                 to toggle between light and dark themes.
@@ -97,9 +95,7 @@
           <div class="gallery__screen-toggle-btns">
             <a
               href="#"
-              class="
-                gallery__screen-toggle-btn gallery__screen-toggle-btn--active
-              "
+              class="gallery__screen-toggle-btn gallery__screen-toggle-btn--active"
               id="screen-toggle-btn__desktop"
               >Desktop</a
             >
@@ -117,13 +113,13 @@
             <div id="desktop-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/desktop/light.png"
+                  src="../resources/images/projects/social-media-dashboard/desktop/light.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/desktop/dark.png"
+                  src="../resources/images/projects/social-media-dashboard/desktop/dark.png"
                   alt="web page"
                 />
               </div>
@@ -133,37 +129,37 @@
             <div id="mobile-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/light top.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/light top.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/light center.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/light center.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/light bottom.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/light bottom.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/dark top.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/dark top.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/dark center.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/dark center.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/social media dashboard/mobile/dark bottom.png"
+                  src="../resources/images/projects/social-media-dashboard/mobile/dark bottom.png"
                   alt="web page"
                 />
               </div>
@@ -173,10 +169,10 @@
       </section>
     </div>
 
-    <script src="../js/project details page/animations/slides maker.js"></script>
+    <script src="../js/project-details-page/animations/slides-maker.js"></script>
     <script
       type="module"
-      src="../js/project details page/animations/links hover animations.js"
+      src="../js/project-details-page/animations/links-hover-animations.js"
     ></script>
   </body>
 </html>
