--- a/projects/softwares-rating-app.html
+++ b/projects/softwares-rating-app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,7 +58,7 @@
             <h1 class="project-details__title">Softwares Rating App</h1>
             <div class="project-details__desc">
               <p>
-                A softwares rating app built with React and Firebase (Firebase
+                A softwares-rating-app built with React and Firebase (Firebase
                 authentication, cloud database and hosting). The user can see
                 all reviews of any software, filter from 1 to 5 star reviews,
                 rate and review any software after logging in, edit his/her
@@ -98,9 +98,7 @@
           <div class="gallery__screen-toggle-btns">
             <a
               href="#"
-              class="
-                gallery__screen-toggle-btn gallery__screen-toggle-btn--active
-              "
+              class="gallery__screen-toggle-btn gallery__screen-toggle-btn--active"
               id="screen-toggle-btn__desktop"
               >Desktop</a
             >
@@ -118,49 +116,49 @@
             <div id="desktop-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/home.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/home.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/software details.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/software details.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/software details bottom.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/software details bottom.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/complete review.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/complete review.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/rate.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/rate.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/rated apps.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/rated apps.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/account.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/account.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/desktop project/signup.png"
+                  src="../resources/images/projects/softwares-rating-app/desktop/signup.png"
                   alt="web page"
                 />
               </div>
@@ -170,55 +168,55 @@
             <div id="mobile-images">
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/home.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/home.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/software details top.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/software details top.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/software details bottom.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/software details bottom.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/complete review.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/complete review.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/rate.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/rate.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/rated apps top.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/rated apps top.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/rated apps bottom.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/rated apps bottom.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/account.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/account.png"
                   alt="web page"
                 />
               </div>
               <div class="gallery__image">
                 <img
-                  src="../resources/images/projects/softwares rating app/desktop/mobile project/signin.png"
+                  src="../resources/images/projects/softwares-rating-app/mobile/signin.png"
                   alt="web page"
                 />
               </div>
@@ -228,10 +226,10 @@
       </section>
     </div>
 
-    <script src="../js/project details page/animations/slides maker.js"></script>
+    <script src="../js/project-details-page/animations/slides-maker.js"></script>
     <script
       type="module"
-      src="../js/project details page/animations/links hover animations.js"
+      src="../js/project-details-page/animations/links-hover-animations.js"
     ></script>
   </body>
 </html>
