Remove main section animations

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <p>
               Great at converting UI designs to code and making them look pixel
               perfect and fully responsive. I love writing clean and simple code
-              to make life easier for myself and other ode contributors.
-              Experienced Web Developer with expertise in HTML, CSS, Javascript,
-              React, NextJs, Node&Express, MySql and MongoDB. A highly motivated
+              to make life easier for myself and other team members. Experienced
+              Web Developer with expertise in HTML, CSS, Javascript, React,
+              NextJs, Node&Express, MySql and MongoDB. A highly motivated
               individual having more than three years of experience using web
               technologies.
             </p>
@@ -170,10 +170,11 @@
             <li class="skill">Responsive Design</li>
             <li class="skill">Javascript</li>
             <li class="skill">React | Redux</li>
-            <li class="skill">Github</li>
+            <li class="skill">NextJs</li>
             <li class="skill">Node | Express</li>
-            <li class="skill">PHP | Laravel</li>
             <li class="skill">MySql</li>
+            <li class="skill">MongoDB</li>
+            <li class="skill">Github</li>
           </ul>
         </div>
       </div>
