Update about me

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
               technologies.
             </p>
             <p>
-              A good programming background as I am pursuing a bachelor's degree
-              in Computer Science from National University of Scienes and
-              Technology (NUST).
+              A strong programming background as I am pursuing a bachelor's
+              degree in Computer Science from National University of Sciences
+              and Technology (NUST), Islamabad, Pakistan.
             </p>
             <a
               href="resources/documents/resume.pdf"
