Update profile pic

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             >
           </div>
           <div class="my-img">
-            <img src="resources/images/me.png" alt="my image" />
+            <img src="resources/images/me.jpg" alt="my image" />
           </div>
         </section>
         <div class="skills">
