--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
           <ul class="skills-list">
             <li class="skill">HTML</li>
             <li class="skill">CSS | SCSS</li>
+            <li class="skill">Tailwind CSS</li>
             <li class="skill">Bootstrap</li>
             <li class="skill">Responsive Design</li>
             <li class="skill">Javascript</li>
@@ -174,7 +175,7 @@
             <li class="skill">Node | Express</li>
             <li class="skill">MySql</li>
             <li class="skill">MongoDB</li>
-            <li class="skill">Github</li>
+            <li class="skill">Git | GitHub</li>
           </ul>
         </div>
       </div>
