Update profession title and style improvements

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="home__content__skill">
               Building Quality Web Experiences
             </h2>
-            <h2 class="home__content__title">Frontend Developer</h2>
+            <h2 class="home__content__title">Full Stack Web Developer</h2>
             <a
               href="#work"
               class="home__content__work-link"
