--- a/index.html
+++ b/index.html
@@ -136,16 +136,13 @@
             <p>
               Full Stack Web Developer with 1+ years of professional experience.
               I am passionate about using my skills as a Full Stack Developer to
-              create innovative solutions that solve real-world problems.
-              Whether it's developing a new application to streamline a
-              company's workflow, or creating a user-friendly website that helps
-              people connect with each other, I am always excited by the
-              opportunity to leverage technology for the greater good. As I
-              continue to grow my skills and experience in the field, I am eager
-              to contribute to projects that make a meaningful impact on society
-              and help improve people's lives. With a passion for writing clean,
-              simple, and refactored code, I always strive to improve the
-              quality of my work.
+              create innovative solutions that solve real-world problems. I am
+              always excited by the opportunity to leverage technology for the
+              greater good. As I continue to grow my skills and experience in
+              the field, I am eager to contribute to projects that make a
+              meaningful impact on society and help improve people's lives. With
+              a passion for writing clean, simple, and refactored code, I always
+              strive to improve the quality of my work.
             </p>
             <p>
               A strong programming background as I am pursuing a bachelor's
