Open social links in new tab

--- a/index.html
+++ b/index.html
@@ -206,17 +206,17 @@
           </div>
           <ul class="contact__info__social-list">
             <li>
-              <a href="https://github.com/rohailtaha"
+              <a href="https://github.com/rohailtaha" target="_blank"
                 ><img src="resources/images/github.svg" alt="github logo"
               /></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/rohail-taha/"
+              <a href="https://www.linkedin.com/in/rohail-taha/" target="_blank"
                 ><img src="resources/images/linkedin.svg" alt="linkedin logo"
               /></a>
             </li>
             <li>
-              <a href="https://twitter.com/rohail_taha"
+              <a href="https://twitter.com/rohail_taha" target="_blank"
                 ><img src="resources/images/twitter.svg" alt="twitter logo"
               /></a>
             </li>
