refactor: improve contact

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
           <div class="contact__info__phone">
             <h2>Mobile</h2>
-            <span>0309 0100461</span>
+            <span>+92 3090100461</span>
           </div>
           <div class="contact__info__address contact__info__address--temporary">
             <h2>Temporary Address</h2>
