update about section

--- a/index.html
+++ b/index.html
@@ -137,20 +137,18 @@
         <section class="about__splitter">
           <div class="personal-details">
             <p>
-              Full Stack Web Developer with 1+ years of professional experience.
-              I am passionate about using my skills as a Full Stack Developer to
-              create innovative solutions that solve real-world problems. I am
-              always excited by the opportunity to leverage technology for the
-              greater good. As I continue to grow my skills and experience in
-              the field, I am eager to contribute to projects that make a
-              meaningful impact on society and help improve people's lives. With
-              a passion for writing clean, simple, and refactored code, I always
-              strive to improve the quality of my work.
+              Passionate and results driven Full Stack Developer committed to
+              delivering efficient and user-friendly solutions. With 1+ years of
+              professional experience, I bring a strong blend of technical
+              expertise and creative problem solving skills. I am always excited
+              by the opportunity to leverage technology for the greater good.
+              With a passion for writing clean, simple, and quality code, I
+              always strive to improve the quality of my work.
             </p>
             <p>
-              A strong programming background as I am pursuing a bachelor's
-              degree in Computer Science from National University of Sciences
-              and Technology (NUST), Islamabad, Pakistan.
+              A strong programming background with a bachelor's degree in
+              Computer Science from National University of Sciences and
+              Technology (NUST), Islamabad, Pakistan.
             </p>
             <a
               href="resources/documents/Resume.pdf"
