--- a/index.html
+++ b/index.html
@@ -165,17 +165,17 @@
         <div class="skills">
           <h1 class="skills__h">Skills</h1>
           <ul class="skills-list">
-            <li class="skill">HTML</li>
+            <li class="skill">Javascript | Typescript</li>
+            <li class="skill">React | Redux</li>
+            <li class="skill">Next.js</li>
             <li class="skill">CSS | SCSS</li>
             <li class="skill">Tailwind CSS</li>
-            <li class="skill">Bootstrap</li>
             <li class="skill">Responsive Design</li>
-            <li class="skill">Javascript</li>
-            <li class="skill">React | Redux</li>
-            <li class="skill">NextJs</li>
+            <li class="skill">Bootstrap</li>
+            <li class="skill">HTML</li>
             <li class="skill">Node | Express</li>
-            <li class="skill">MySql</li>
-            <li class="skill">MongoDB</li>
+            <li class="skill">PHP | Laravel</li>
+            <li class="skill">MongoDB | MySql</li>
             <li class="skill">Git | GitHub</li>
           </ul>
         </div>
