style: update footer style
remove temporary address section

--- a/index.html
+++ b/index.html
@@ -194,17 +194,15 @@
             <h2>Mobile</h2>
             <span>+92 3090100461</span>
           </div>
-          <div class="contact__info__address contact__info__address--temporary">
-            <h2>Temporary Address</h2>
-            <p>Hostels at NUST University, Islamabad, Pakistan</p>
-          </div>
-          <div class="contact__info__address contact__info__address--permanent">
-            <h2>Permanent Address</h2>
+          <div class="contact__info__address">
+            <h2>Address</h2>
             <p>Samundri, Faisalabad, Pakistan</p>
           </div>
           <ul class="contact__info__social-list">
             <li>
-              <a href="https://github.com/rohailtaha" target="_blank"
+              <a
+                href="https://gisass --watch scss/main.scss:css/main.cssthub.com/rohailtaha"
+                target="_blank"
                 ><img src="resources/images/github.svg" alt="github logo"
               /></a>
             </li>
