style: update font family for contact info

--- a/index.html
+++ b/index.html
@@ -188,21 +188,19 @@
         <section class="contact__info">
           <div class="contact__info__email">
             <h2>Email</h2>
-            <span>taharohail77@gmail.com</span>
+            <h3>taharohail77@gmail.com</h3>
           </div>
           <div class="contact__info__phone">
             <h2>Mobile</h2>
-            <span>+92 3090100461</span>
+            <h3>+92 3090100461</h3>
           </div>
           <div class="contact__info__address">
             <h2>Address</h2>
-            <p>Samundri, Faisalabad, Pakistan</p>
+            <h3>Samundri, Faisalabad, Pakistan</h3>
           </div>
           <ul class="contact__info__social-list">
             <li>
-              <a
-                href="https://gisass --watch scss/main.scss:css/main.cssthub.com/rohailtaha"
-                target="_blank"
+              <a href="https://www.github.com/rohailtaha/" target="_blank"
                 ><img src="resources/images/github.svg" alt="github logo"
               /></a>
             </li>
